[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/sprites/1bit_assets.png" type="Texture" id=1]
[ext_resource path="res://scripts/collectibles/Gems.gd" type="Script" id=2]
[ext_resource path="res://Assets/audio/sounds_effects/gem1.wav" type="AudioStream" id=3]


[sub_resource type="CircleShape2D" id=6]
radius = 16.0312

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 800, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 880, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 960, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1040, 0, 80, 80 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -7.8391, 8 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "bounce"
length = 0.55
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.55 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -7.8391, 8 ), Vector2( -7.8391, -64 ), Vector2( -7.8391, -32 ) ]
}

[node name="Gems" type="Area2D"]
position = Vector2( 8, -8 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -8, 4 )
shape = SubResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 0.54902, 0.00392157, 1, 1 )
position = Vector2( -7.8391, 8 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 5 )
frame = 2
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 10 )
anims/bounce = SubResource( 11 )

[node name="collect_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -26.601

[connection signal="body_entered" from="." to="." method="_on_Gems_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
